feat: update the docker setup

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -19,7 +19,7 @@ services:
       - "5439:5439"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./database/init:/docker-entrypoint-initdb.d
+      - ./src/database/init:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 30s
