--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,40 +12,56 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@tanstack/react-query": "^5.8.4",
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.469.0",
+    "next": "15.5.3",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3",
-    "@auth0/nextjs-auth0": "^3.5.0",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.5",
-    "@tanstack/react-query": "^5.8.4",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "zustand": "^4.4.7",
-    "date-fns": "^2.30.0",
     "recharts": "^2.8.0",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "class-variance-authority": "^0.7.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "tailwindcss": "^3.3.6",
-    "postcss": "^8.4.32",
     "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=22.0.0"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "react": "19",
+        "react-dom": "19",
+        "eslint": "9"
+      },
+      "ignoreMissing": [
+        "@algolia/client-search"
+      ]
+    }
   }
 }
