--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
 	"description": "Modern Point of Sale system with Auth0 and PostgreSQL",
 	"main": "dist/index.js",
 	"scripts": {
-		"dev": "tsx watch src/index.ts",
+		"install:all": "pnpm install && cd frontend && pnpm install",
+    "dev": "PORT=3001 tsx watch src/index.ts",
+		"dev:frontend": "cd frontend && pnpm dev",
+		"dev:all": "concurrently \"pnpm dev\" \"pnpm dev:frontend\"",
 		"build": "tsc",
+		"build:frontend": "cd frontend && pnpm build",
 		"start": "node dist/index.js",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"test:coverage": "jest --coverage",
-		"lint": "eslint src --ext .ts,.tsx",
-		"lint:fix": "eslint src --ext .ts,.tsx --fix",
-		"typecheck": "tsc --noEmit",
-		"db:migrate": "knex migrate:latest",
-		"db:rollback": "knex migrate:rollback",
-		"db:seed": "knex seed:run",
-		"docker:up": "docker compose up -d",
-		"docker:up:local": "docker compose -f docker-compose.yml -f docker-compose.local.yml up -d",
-		"docker:up:remote": "docker compose -f docker-compose.yml -f docker-compose.remote.yml up -d",
+		"db:migrate": "pnpm build && knex migrate:latest --knexfile knexfile.js",
+		"db:rollback": "pnpm build && knex migrate:rollback --knexfile knexfile.js",
+		"db:seed": "pnpm build && knex seed:run --knexfile knexfile.js",
+		"setup:db": "pnpm db:migrate && pnpm db:seed",
+    "docker:up": "docker compose up -d db redis",
 		"docker:down": "docker compose down",
 		"docker:logs": "docker compose logs -f",
 		"docker:build": "docker compose build",
-		"docker:build:clean": "docker compose build --no-cache",
 		"docker:clean": "docker compose down -v --rmi all --remove-orphans && docker system prune -f",
-		"dev:frontend": "cd frontend && pnpm dev",
-		"build:frontend": "cd frontend && pnpm build",
-		"install:all": "pnpm install && cd frontend && pnpm install"
+		"docker:setup": "pnpm docker:up && sleep 15 && pnpm setup:db",
+		"lint": "eslint src --ext .ts,.tsx",
+		"lint:fix": "eslint src --ext .ts,.tsx --fix",
+		"typecheck": "tsc --noEmit",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage"
 	},
 	"keywords": [
 		"pos",
@@ -45,28 +45,18 @@
 	},
 	"packageManager": "pnpm@8.15.6",
 	"dependencies": {
-		"auth0": "^4.1.0",
-		"bcryptjs": "^2.4.3",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
-		"date-fns": "^2.30.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"express-jwt": "^8.4.1",
-		"express-oauth-server": "^2.0.0",
 		"express-rate-limit": "^7.1.5",
-		"express-validator": "^7.0.1",
 		"helmet": "^7.1.0",
-		"joi": "^17.11.0",
-		"jwks-rsa": "^3.0.1",
 		"knex": "^3.0.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.11.3",
-		"redis": "^4.6.10",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
-		"@types/bcryptjs": "^2.4.6",
 		"@types/compression": "^1.7.5",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
@@ -76,22 +66,29 @@
 		"@types/pg": "^8.10.7",
 		"@types/supertest": "^2.0.16",
 		"@types/uuid": "^9.0.7",
-		"@typescript-eslint/eslint-plugin": "^6.11.0",
-		"@typescript-eslint/parser": "^6.11.0",
-		"eslint": "^8.57.1",
+		"@typescript-eslint/eslint-plugin": "^8.18.0",
+		"@typescript-eslint/parser": "^8.18.0",
+		"concurrently": "^8.2.2",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.1",
 		"jest": "^29.7.0",
-		"nodemon": "^3.0.1",
 		"prettier": "^3.1.0",
-		"supertest": "^6.3.4",
+		"supertest": "^7.1.3",
 		"ts-jest": "^29.1.1",
+		"ts-node": "^10.9.1",
+		
 		"tsx": "^4.1.2",
 		"typescript": "^5.2.2"
 	},
 	"pnpm": {
 		"overrides": {
 			"semver": ">=7.5.2"
+		},
+		"peerDependencyRules": {
+			"allowedVersions": {
+				"eslint": "9"
+			}
 		}
 	}
 }
