--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"install:all": "pnpm install && cd frontend && pnpm install",
-    "dev": "PORT=3001 tsx watch src/index.ts",
+		"dev": "PORT=3001 tsx watch src/index.ts",
 		"dev:frontend": "cd frontend && pnpm dev",
 		"dev:all": "concurrently \"pnpm dev\" \"pnpm dev:frontend\"",
 		"build": "tsc",
@@ -15,7 +15,7 @@
 		"db:rollback": "pnpm build && knex migrate:rollback --knexfile knexfile.js",
 		"db:seed": "pnpm build && knex seed:run --knexfile knexfile.js",
 		"setup:db": "pnpm db:migrate && pnpm db:seed",
-    "docker:up": "docker compose up -d db redis",
+		"docker:up": "docker compose up -d db redis",
 		"docker:down": "docker compose down",
 		"docker:logs": "docker compose logs -f",
 		"docker:build": "docker compose build",
@@ -72,12 +72,12 @@
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.1",
+		"globals": "^16.4.0",
 		"jest": "^29.7.0",
 		"prettier": "^3.1.0",
 		"supertest": "^7.1.3",
 		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
-		
 		"tsx": "^4.1.2",
 		"typescript": "^5.2.2"
 	},
