--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"pnpm": ">=8.0.0"
 	},
 	"packageManager": "pnpm@8.15.6",
-	"dependencies": {
+  "dependencies": {
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
@@ -54,9 +54,10 @@
 		"knex": "^3.0.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.11.3",
-		"uuid": "^9.0.1"
-	},
-	"devDependencies": {
+    "uuid": "^9.0.1",
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
 		"@types/compression": "^1.7.5",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
@@ -79,8 +80,9 @@
 		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"tsx": "^4.1.2",
-		"typescript": "^5.2.2"
-	},
+    "typescript": "^5.2.2",
+    "@types/ws": "^8.5.10"
+  },
 	"pnpm": {
 		"overrides": {
 			"semver": ">=7.5.2"
